# showrun

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-10-26-124755_showrun_db/: down.sql  up.sql
src/: main.rs  service.rs
src/handlers/: auth.rs  mod.rs  tasks.rs
src/models/: mod.rs  schema.rs
