[package]
name = "showrun"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-redis = "0.13.1"
actix-web = "4.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "mysql", "postgres", "r2d2", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
service = "0.0.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std-native-tls"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
